@@ -64,3 +64,4 @@ cursor5
 attributes
 hidden
 blob1
+cancel
